--- a/modules/module-5.1.qmd
+++ b/modules/module-5.1.qmd
@@ -9,14 +9,30 @@ execute:
   warning: false
 ---
 
+:::{.callout-tip}
+- Get a [FRED API key](https://fred.stlouisfed.org/docs/api/api_key.html)
+- Install [fredr](https://cran.r-project.org/web/packages/fredr/vignettes/fredr.html) and read about its basic usage
+- Install [shiny](https://shiny.posit.co/) and read about the 
+:::
+
+## Overview
+
+
+
 ## Scatter plot app
 
-<iframe src="https://emmanuelteitelbaum.shinyapps.io/scatterplot/" width="800" height="470" data-external="1"></iframe>
+<iframe src="https://emmanuelteitelbaum.shinyapps.io/scatterplot/" width="1050" height="700" data-external="1"></iframe>
 
 ## Setup 
 
+{{< video https://www.youtube.com/embed/wo9vZccmqwc title = 'View regression results with broom'>}}
+
+Say something about how to set up an app.R script. 
+
 ```{r}
+#| label: setup
 #| eval: false
+
 # load packages
 library(shiny)
 library(readr)
@@ -39,8 +55,12 @@ vars <- c("Democracy" = "polyarchy",
 
 ## ui 
 
+{{< video https://www.youtube.com/embed/wo9vZccmqwc title = 'View regression results with broom'>}}
+
 ```{r}
+#| label: ui
 #| eval: false
+
 # Define UI for application that draws a histogram
 ui <- fluidPage(
 
@@ -66,8 +86,12 @@ ui <- fluidPage(
 
 ## Server
 
+{{< video https://www.youtube.com/embed/wo9vZccmqwc title = 'View regression results with broom'>}}
+
 ```{r}
+#| label: server
 #| eval: false
+
 # Define server logic required to draw a scatter plot
 server <- function(input, output, session) {
   
@@ -96,6 +120,7 @@ server <- function(input, output, session) {
 ## Call to Shiny app
 
 ```{r}
+#| label: call_shiny
 #| eval: false
 
 # See above for the definitions of ui and server
