--- a/modules/module-5.1.qmd
+++ b/modules/module-5.1.qmd
@@ -21,13 +21,55 @@ execute:
 
 ## Scatter plot app
 
-<iframe src="https://emmanuelteitelbaum.shinyapps.io/scatterplot/" width="780" height="500" data-external="1"></iframe>
+<iframe src="https://emmanuelteitelbaum.shinyapps.io/vdem-scatter-plot/" width="780" height="500" data-external="1"></iframe>
+
 
 ## Setup 
 
 {{< video https://www.youtube.com/embed/wo9vZccmqwc title = 'View regression results with broom'>}}
 
-Say something about how to set up an app.R script. 
+### Wrangle data and produce .csv file
+
+Say something about how to set up an app.R script. We could include this code in app.R file, but it would require more resources than a free account. So instead we will wrangle the data first and save it in a .csv file. 
+
+```{r}
+#| label: wrangle
+#| eval: false
+library(vdemdata)
+library(dplyr)
+library(readr)
+
+dem_data <- vdem |>
+  filter(year > 2000) |>
+  select(
+    country = country_name, 
+    polyarchy = v2x_polyarchy,
+    clientelism = v2xnp_client,
+    corruption = v2xnp_regcorr,
+    womens_emp = v2x_gender,
+    gdp_pc = e_gdppc,
+    inf_mort = e_peinfmor,
+    life_exp = e_pelifeex,
+    education = e_peaveduc,
+    region = e_regionpol_6C 
+  ) |>   mutate(
+    region = case_match(region, 
+                        1 ~ "Eastern Europe", 
+                        2 ~ "Latin America",  
+                        3 ~ "Middle East",   
+                        4 ~ "Africa", 
+                        5 ~ "The West", 
+                        6 ~ "Asia")
+  ) |>
+  group_by(country, region) |>
+  summarize_all(mean, na.rm = TRUE)
+
+#glimpse(dem_data)
+
+write_csv(dem_data, "dem_data.csv")
+```
+
+This chunk we will include in the app.R script. 
 
 ```{r}
 #| label: setup
@@ -38,7 +80,7 @@ library(shiny)
 library(readr)
 library(ggplot2)
 
-# read in data, create a vector of variable names
+# load the data 
 dem_data <- read_csv("dem_data.csv")
 
 # create list of named values for the input selection
@@ -51,7 +93,6 @@ vars <- c("Democracy" = "polyarchy",
           "Life Expectancy" = "life_exp", 
           "Education" = "education")
 ```
-
 
 ## ui 
 
